[tool.poetry]
name = "stock"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tushare = "^1.2.89"
pandas = "^1.5.2"
numpy = "^1.24.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^22.12.6"
flake8-implicit-str-concat = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
